--- a/dev files/04 based on SORT.ipynb
+++ b/dev files/04 based on SORT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36fa430e",
+   "id": "bc500c23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bd1dc975",
+   "id": "f319ff22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "33dab0e2",
+   "id": "a90d65e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1d78e4b1",
+   "id": "e3ef0408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "95cdb2bb",
+   "id": "77021603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,12 +154,12 @@
     "        self.kf.update(convert_bbox_to_z(bbox))\n",
     "        self.update_history.append(bbox)\n",
     "\n",
-    "        if  len(self.update_history)>=no_of_past_frames :\n",
+    "        if  len(self.update_history)>=self.no_of_past_frames :\n",
     "            kbt = KalmanBoxTrajectory(self.update_history[0])\n",
-    "            for j in range(1,no_of_past_frames):\n",
+    "            for j in range(1,self.no_of_past_frames):\n",
     "                kbt.predict()\n",
-    "                p = kbt.update(self.update_history[j])\n",
-    "            for k in range(no_of_future_frames):\n",
+    "                p = kbt.update(self.updateself._history[j])\n",
+    "            for k in range(self.no_of_future_frames):\n",
     "                p = kbt.predict()[0]\n",
     "                self.predict_history.append(p)\n",
     "\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e1a80cf3",
+   "id": "0ed4faf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4ad63329",
+   "id": "ee073b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8389b518",
+   "id": "ff0e83e8",
    "metadata": {},
    "source": [
     "### test functions"
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f6f292a",
+   "id": "f7ed0420",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "072b8dfb",
+   "id": "42b885ad",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3cdd60c3",
+   "id": "240274c7",
    "metadata": {
     "scrolled": true
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7ae571bb",
+   "id": "869aae7b",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ea268680",
+   "id": "db3484fc",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bc62be79",
+   "id": "c2378648",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d88e97dd",
+   "id": "e45c6c2c",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "50c588fd",
+   "id": "f61c0042",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ec9c2d49",
+   "id": "52c449b7",
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85c1b64d",
+   "id": "a7301aae",
    "metadata": {},
    "source": [
     "### Trajectory class"
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "630e2cc0",
+   "id": "9f408e2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8ac579a7",
+   "id": "ac260df8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "81e4ef87",
+   "id": "9d8a48c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "73092b10",
+   "id": "78847a0d",
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "daa16d62",
+   "id": "010ef557",
    "metadata": {},
    "outputs": [
     {
